# manifest-quiz

./: .gitignore  CLAUDE.md  README.md  combine_quizzes.py  generate_all_quizzes.py  pyproject.toml  quiz_01_チームみらいのビジョン.csv  quiz_02_政策インデックス.csv  quiz_11_ステップ１教育.csv  quiz_12_ステップ１子育て.csv  quiz_13_ステップ１行政改革.csv  quiz_14_ステップ１産業.csv  quiz_15_ステップ１科学技術.csv  quiz_16_ステップ１デジタル民主主義.csv  quiz_17_ステップ１医療.csv  quiz_20_ステップ２「変化に対応できるしなやかな仕組みづくり」.csv  quiz_21_ステップ２教育.csv  quiz_22_ステップ２行政改革.csv  quiz_23_ステップ２経済財政.csv  quiz_24_ステップ２医療.csv  quiz_30_ステップ３「長期の成長に大胆に投資する」.csv  quiz_31_ステップ３子育て.csv  quiz_32_ステップ３教育.csv  quiz_33_ステップ３科学技術.csv  quiz_34_ステップ３産業.csv  quiz_35_ステップ３エネルギー.csv  quiz_36_ステップ３経済財政.csv  quiz_37_ステップ３医療.csv  quiz_40_国政政党成立後100日プラン.csv  quiz_50_国政のその他重要分野.csv  quiz_60_改善提案の反映方針.csv  quiz_all_combined.csv
csv/: quiz_01_チームみらいのビジョン.csv  quiz_10_ステップ１「デジタル時代の当たり前をやりきる」.csv  quiz_11_ステップ１教育.csv  quiz_12_ステップ１子育て.csv  quiz_13_ステップ１行政改革.csv  quiz_14_ステップ１産業.csv  quiz_15_ステップ１科学技術.csv  quiz_16_ステップ１デジタル民主主義.csv  quiz_17_ステップ１医療.csv  quiz_21_ステップ２教育.csv  quiz_22_ステップ２行政改革.csv  quiz_23_ステップ２経済財政.csv  quiz_24_ステップ２医療.csv  quiz_30_ステップ３「長期の成長に大胆に投資する」.csv  quiz_31_ステップ３子育て.csv  quiz_32_ステップ３教育.csv  quiz_33_ステップ３科学技術.csv  quiz_35_ステップ３エネルギー.csv  quiz_36_ステップ３経済財政.csv  quiz_40_国政政党成立後100日プラン.csv  quiz_50_国政のその他重要分野.csv  quiz_60_改善提案の反映方針.csv
data/: quiz_01_チームみらいのビジョン.csv  quiz_02_政策インデックス.csv  quiz_10_ステップ１「デジタル時代の当たり前をやりきる」.csv  quiz_11_ステップ１教育.csv  quiz_12_ステップ１子育て.csv  quiz_13_ステップ１行政改革.csv  quiz_14_ステップ１産業.csv  quiz_15_ステップ１科学技術.csv  quiz_17_ステップ１医療.csv  quiz_21_ステップ２教育.csv  (+7 more)
(+3 files in other folders)
